# ChangeLog for dev-util/gtk-doc
# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/gtk-doc/ChangeLog,v 1.104 2009/05/04 00:29:10 leio Exp $

*gtk-doc-1.11 (04 May 2009)

  04 May 2009; Mart Raudsepp <leio@gentoo.org>
  +files/gtk-doc-1.11-fix-index-id-gen.patch,
  +files/gtk-doc-1.11-quote-filenames-with-space.patch,
  +files/gtk-doc-1.11-tests-fixes.patch, -gtk-doc-1.8-r2.ebuild,
  -gtk-doc-1.10-r1.ebuild, +gtk-doc-1.11.ebuild:
  New version with various bug fixes and improvements. User documentation is
  installed again, viewable with yelp. Remove old versions

  28 Apr 2009; Raúl Porcel <armin76@gentoo.org> gtk-doc-1.10-r2.ebuild:
  m68k stable

  02 Mar 2009; Raúl Porcel <armin76@gentoo.org> gtk-doc-1.10-r2.ebuild:
  arm/s390/sh stable

  13 Nov 2008; Brent Baude <ranger@gentoo.org> gtk-doc-1.10-r2.ebuild:
  Marking gtk-doc-1.10-r2 ppc64 stable for bug 236971

  25 Sep 2008; Jeroen Roovers <jer@gentoo.org> gtk-doc-1.10-r2.ebuild:
  Stable for HPPA (bug #236971).

  11 Aug 2008; Raúl Porcel <armin76@gentoo.org> gtk-doc-1.10-r2.ebuild:
  ia64 stable

  15 Jun 2008; Gilles Dartiguelongue <eva@gentoo.org> gtk-doc-1.8-r2.ebuild,
  gtk-doc-1.10-r1.ebuild, gtk-doc-1.10-r2.ebuild:
  add glib to RDEPEND, bug #227309. Drop mips to ~arch to silence repoman.

*gtk-doc-1.10-r2 (06 Jun 2008)

  06 Jun 2008; Rémi Cardona <remi@gentoo.org> +gtk-doc-1.10-r2.ebuild:
  Don't install the gnome/yelp help files (bug #224519)

  25 May 2008; Markus Meier <maekke@gentoo.org> gtk-doc-1.10-r1.ebuild:
  amd64/x86 stable, bug #223297

  24 May 2008; nixnut <nixnut@gentoo.org> gtk-doc-1.10-r1.ebuild:
  Stable on ppc wrt bug 223297

  24 May 2008; Tobias Klausmann <klausman@gentoo.org>
  gtk-doc-1.10-r1.ebuild:
  Stable on alpha, bug #223297

  23 May 2008; Ferris McCormick <fmccor@gentoo.org> gtk-doc-1.10-r1.ebuild:
  Add sparc keyword, required for Bug #223297.
