@@ -8,5 +8,5 @@ DIST gtk-doc-1.10.tar.bz2 404379 RMD160 b7f7563ddec9ff140fc6fc6feea5b7f49cb1ff32
 DIST gtk-doc-1.11.tar.bz2 453459 RMD160 802c61e4e2072f5e91fe65d6f40587313b7bd23b SHA1 685823e269cc08fdef50828b0a68697222877b1c SHA256 92135cdf89c48a52baa8920f69d702b22d1a7556af410709d2172b90ec33ff23
 EBUILD gtk-doc-1.10-r2.ebuild 2085 RMD160 3096bbf51467a1cea6806314d986fb6be50e61bc SHA1 08fff61bfacf225be342ee96e6943504e112c358 SHA256 28480a3fd352bf369569470ebda1ca9a9383e2c4a6e85f10efa2815f92e3f566
 EBUILD gtk-doc-1.11.ebuild 2282 RMD160 28a99741fd10a829660ad9fdac9d71ed92098a9f SHA1 e9b62bf29835b915a8e8be9812e187432932d3cd SHA256 6e2b94b9e69c1aa8c609718204a3407e8776de1873ca92ea83e7a8f940daf78c
-MISC ChangeLog 14644 RMD160 7554f4a71753f9102ea0f3a47999371d72ffed00 SHA1 f9f30e621fa171c4c793937f403f04572d38be93 SHA256 016c0a641bd914a1df372634ed247c4ecb6c8c8fe79c645845203ae32e4d09b7
-MISC metadata.xml 158 RMD160 c0e2bae8e91bb6be8922bac5e4f597302e06587e SHA1 38f78e9790bcd4382b4a49aa226aa6dda1d3a3d7 SHA256 3a7dbca0fdc557de69783e0663e2d76ddab129ea8a19b2d0ef6d3e5d1b947ce1
+MISC ChangeLog 14756 RMD160 fc5264375b3915eb120c57231d23382b10a17679 SHA1 1e806e3ef0a88a805c878875f78d8a78fe559568 SHA256 7a2d035cbaeef1a6192438b1bf7d1c10eb5ef24a349becacc8e7af5cc72333d9
+MISC metadata.xml 399 RMD160 c36a962162c4c335e5d5c3059b17709481e026c2 SHA1 2584444f5432843239cf7e1b0c4a04375eff1aee SHA256 ce4f066425793550cba43ceaac34ae7d582ff7d7e7ae085042b285479d1a4a57
